<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/imagen2"
    android:orientation="vertical"
    tools:context=".camara">


    <TableRow
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btnCamara"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/BTNCAMARA" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="279dp"
            android:layout_height="422dp" />

    </TableRow>

    <LinearLayout
        android:layout_width="406dp"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="86dp">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:rotation="-14"
                android:rotationX="-42"
                android:rotationY="-10"
                android:text="@string/FOTOCEDULA"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#090909"
                android:textSize="35sp" />
        </TableRow>
    </LinearLayout>

    <Button
        android:id="@+id/button4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ATRAS" />

</LinearLayout>